# gtest_cmake

./: Bar.h  CMakeLists.txt  FooInterface.h  FooMock.h  README.md  main.cpp  sub.cpp  sub.h  sum.cpp  sum.h
test/: CMakeLists.txt
test/testFoo/: testFoo.cpp
test/testsub/: CMakeLists.txt  testmain.cpp
test/testsum/: CMakeLists.txt  testmain.cpp
